--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,88 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
-html{
-    font-size: 62.5%;
+html {
+  font-size: 62.5%;
 }
 /* khôi phục lại cỡ chữ mặc định theo rem */
-body{
-    font-size: 1.6rem;
+body {
+  font-size: 1.6rem;
+  font-family: "Poppins", sans-serif;
+}
+a {
+  text-decoration: none;
+}
+.btn {
+  display: inline-block;
+  padding: 0 16px;
+  min-width: 118px;
+  line-height: 50px;
+  font-weight: 600;
+  font-size: 1.6rem;
+  text-align: center;
+  color: rgba(255, 255, 255, 1);
+  width: 144;
+  height: 50;
+  top: 36px;
+  left: 1161px;
+  border-radius: 24.5px;
+  background: rgba(23, 17, 0, 1);
+}
+.header .body {
+  display: flex;
+  align-items: center;
+  padding: 36px 0 8px;
+}
+.nav {
+  margin-left: auto;
+}
+.nav ul {
+  display: flex;
+}
+.main-content {
+  width: 1170px;
+  margin-right: auto;
+  margin-left: auto;
+  /* 85 */
+  max-width: calc(100%-48px);
+}
+.header {
+  background: rgba(255, 252, 244, 1);
+}
+.header.fixed{
+    position: sticky;
+    top:-28px;
+}
+.nav a {
+  position: relative;
+  font-size: 1.6rem;
+  color: rgba(95, 91, 83, 1);
+  padding: 8px 21px;
+}
+/* 33 tsc động lên thẻ a khi  di chuột vào */
+.nav li.active a,
+.nav a:hover {
+  /* font-weight: 600; */
+  /* 65. bóng đổ */
+  text-shadow: 1px 0 0 currentColor;
+  color: rgba(23, 17, 0, 1);
+}
+
+.nav li.active a::after {
+  position: absolute;
+  left: 21px;
+  bottom: 8px;
+  display: block;
+  content: "";
+  width: 12px;
+  height: 2px;
+  border-radius: 1px;
+  background: rgba(23, 17, 0, 1);
+}
+.header .btn-sign-up {
+  min-width: 144px;
+}
+
+.header .action{
+    margin-left: 49px;
 }
